adding updations
